export class Customer {
  _id: string;
  firstName: string;
  lastName: string;
  phone: string;
  taxId: string;
  address: string;
  email: string;
  createAt: Date;
  active: string;
}