export class User {
    _id: string;
    branch: string;
    role: string;
    firstName: string;
    lastName: string;
    taxId: string;
    email: string;
    phone: string;
    active: boolean;
    hash: string;
    urlImage: string;
    address: string;
    city: string;
    country: string;
    state: string;
    postal: string;
    about: string;
    password: string;
    hasToUpdatePassword: string;
}
